# BELL

./: .clang-format  .gitignore  CMakeLists.txt  README  build.sh  install_requirement.sh  run.sh  test_client
src/: entity_link_handler.cpp  (+2 more)
src/common/: CMakeLists.txt  readme
src/common/config/: bell_config.cpp  bell_config.h  config_manager.cpp  config_manager.h
src/common/data/: buffer_loader.h  dict_manager.cpp  dict_manager.h  dict_match.h  file_register.cpp  file_register.h  file_registerh  file_template_map.cpp  file_template_map.h  record.h  record_factory.h
src/common/data/record/: base_record.h  key_value_record.cpp  key_value_record.h
src/common/eigen/: CMakeLists.txt
src/common/event/: base_signal_output.h  bell_handler_event.h  bell_types.h  ner_output.h  word_seg_output.h
src/common/model/: model_base.h  model_manager.h  model_seg_cnncrf.h  model_util.cpp  model_util.h
src/common/model/word_seg_model/: cnn_crf.cpp  cnn_crf.h  eigen_utils.cpp  eigen_utils.h
src/common/util/: base_define.h  clucene_wraper.cpp  clucene_wraper.h  json_wrap.cpp  json_wrap.h  lucene_wraper.cpp  lucene_wraper.h  md5.h  str_util.h  xml_helper.cpp  xml_helper.h
src/common/word_seg_model/: cnn_crf.cpp  cnn_crf.h  eigen_utils.cpp  eigen_utils.h
src/main/: CMakeLists.txt  entity_link_handler.cpp  entity_link_handler.h  entity_link_server.cpp  entity_link_server.h  main.cpp  resource_init.cpp  resource_init.h
submodules/: CMakeLists.txt
submodules/clucene_core/: CLMonolithic.cpp  CLucene.h  CLuceneConfig.cmake  CMakeLists.txt  StdHeader.cpp  StdHeader.h  _ApiHeader.h  libclucene-shared.so.0.9.23
submodules/clucene_core/CLucene/: clucene-config.h
submodules/clucene_core/CLucene/queryParser/: QueryParser.h
submodules/clucene_core/analysis/: AnalysisHeader.cpp  AnalysisHeader.h  Analyzers.cpp  Analyzers.h  CachingTokenFilter.cpp  CachingTokenFilter.h
submodules/clucene_core/analysis/standard/: StandardAnalyzer.cpp  StandardAnalyzer.h  StandardFilter.cpp  StandardFilter.h  StandardTokenizer.cpp  test_head.cpp  test_head.h
submodules/clucene_core/cmake/: CheckFloatByte.cmake  CheckStdCallFunctionExists.cmake  DefineOptions.cmake
submodules/clucene_core/debug/: error.cpp  error.h  lucenebase.h
submodules/clucene_core/document/: DateField.cpp  DateTools.cpp  DateTools.h  Document.cpp  Document.h  Field.cpp  Field.h  FieldSelector.cpp  FieldSelector.h  NumberTools.cpp
submodules/clucene_core/index/: CompoundFile.cpp  DirectoryIndexReader.cpp  DocumentsWriter.cpp  DocumentsWriterThreadState.cpp  FieldInfos.cpp  FieldsReader.cpp  FieldsWriter.cpp  IndexDeletionPolicy.cpp  IndexDeletionPolicy.h  IndexFileDeleter.cpp  IndexFileNameFilter.cpp  IndexFileNames.cpp  IndexModifier.cpp  IndexModifier.h  IndexReader.cpp  IndexReader.h  IndexWriter.cpp  IndexWriter.h  MergePolicy.cpp  MergePolicy.h  MergeScheduler.cpp  MergeScheduler.h  MultiReader.cpp  MultiSegmentReader.cpp  MultipleTermPositions.cpp  MultipleTermPositions.h  Payload.cpp  Payload.h  SegmentInfos.cpp  SegmentMergeInfo.cpp  SegmentMergeQueue.cpp  SegmentMerger.cpp  SegmentReader.cpp  SegmentTermDocs.cpp  SegmentTermEnum.cpp  SegmentTermPositions.cpp  SegmentTermVector.cpp  SkipListReader.cpp  SkipListWriter.cpp  Term.cpp  (+25 more)
submodules/clucene_core/queryParser/: FastCharStream.cpp  MultiFieldQueryParser.cpp  MultiFieldQueryParser.h  QueryParser.cpp  QueryParser.h  QueryParserTokenManager.cpp  QueryParserTokenManager.h  QueryToken.cpp
submodules/clucene_core/queryParser/legacy/: Lexer.cpp  MultiFieldQueryParser.cpp  MultiFieldQueryParser.h  QueryParser.cpp  QueryParserBase.cpp  QueryToken.cpp  TokenList.cpp
submodules/clucene_core/search/: BooleanQuery.cpp  BooleanQuery.h  BooleanScorer.cpp  BooleanScorer2.cpp  CachingSpanFilter.cpp  CachingWrapperFilter.cpp  ChainedFilter.cpp  Compare.cpp  ConjunctionScorer.cpp  ConstantScoreQuery.cpp  DateFilter.cpp  DisjunctionSumScorer.cpp  ExactPhraseScorer.cpp  Explanation.cpp  Explanation.h  FieldCache.cpp  FieldCacheImpl.cpp  FieldDocSortedHitQueue.cpp  FieldSortedHitQueue.cpp  FieldSortedHitQueue.h  FilterResultCache.cpp  FilteredTermEnum.cpp  FilteredTermEnum.h  FuzzyQuery.cpp  HitQueue.cpp  Hits.cpp  Hits.h  IndexSearcher.cpp  MatchAllDocsQuery.cpp  MultiPhraseQuery.cpp  MultiPhraseQuery.h  MultiSearcher.cpp  MultiTermQuery.cpp  PhrasePositions.cpp  PhraseQuery.cpp  PhraseQuery.h  PhraseScorer.cpp  PrefixQuery.cpp  Query.h  QueryFilter.cpp  (+21 more)
submodules/clucene_core/search/spans/: NearSpansOrdered.cpp  NearSpansUnordered.cpp  SpanFirstQuery.cpp  SpanNearQuery.cpp  SpanNotQuery.cpp  SpanOrQuery.cpp  SpanQuery.h  SpanScorer.cpp  SpanScorer.h  SpanTermQuery.cpp  SpanWeight.cpp  SpanWeight.h  TermSpans.cpp  _NearSpansUnordered.h  _TermSpans.h
submodules/clucene_core/shared/: CLSharedMonolithic.cpp  SharedHeader.cpp  SharedHeader.h  _SharedHeader.h  clucene-config.h
submodules/clucene_core/shared/config/: gunichartables.cpp  repl_lltot.cpp  repl_tcscasecmp.cpp  repl_tcslwr.cpp  repl_tcstod.cpp  repl_tcstoll.cpp  repl_tprintf.cpp  repl_wchar.h  repl_wctype.h  threads.cpp  utf8.cpp
submodules/clucene_core/store/: Directory.cpp  Directory.h  FSDirectory.cpp  IndexInput.cpp  IndexInput.h  IndexOutput.cpp  Lock.cpp  Lock.h  LockFactory.cpp  LockFactory.h  MMapInput.cpp  RAMDirectory.cpp  RAMDirectory.h
submodules/clucene_core/util/: BitSet.cpp  Equators.cpp  FastCharStream.cpp  MD5Digester.cpp  Reader.cpp  Reader.h  StringIntern.cpp  ThreadLocal.cpp  VoidList.h  VoidMap.h
submodules/json_cpp/: CMakeLists.txt  json_value.cpp  json_writer.cpp
submodules/mini_clucene/: CMakeLists.txt  README.md  StdHeader.h  _ApiHeader.h
submodules/mini_clucene/analysis/: AnalysisHeader.cpp  AnalysisHeader.h
submodules/mini_clucene/debug/: condition.cpp  error.cpp
submodules/mini_clucene/index/: Payload.cpp  Payload.h
submodules/mini_clucene/shared/: SharedHeader.h  StringBuffer.cpp  _SharedHeader.h
submodules/mini_clucene/util/: VoidList.h  VoidMap.h
submodules/muduo/: CMakeLists.txt
submodules/muduo/base/: CMakeLists.txt
submodules/muduo/net/: CMakeLists.txt
(+65 files in other folders)
